# CppKeyboardColour

./: .gitattributes  .gitignore  CMakePresets.json  CppKeyboardColour.sln  README.md  UpgradeLog.htm
CppKbDeviceIdComWrapper/: CppKbDeviceIdComWrapper.def  CppKbDeviceIdComWrapper.vcxproj  CppKbDeviceIdComWrapper.vcxproj.filters  CppKeyboardDevice.cpp  CppKeyboardDevice.h  CppKeyboardDeviceFactory.cpp  CppKeyboardDeviceFactory.h  DllExports.cpp  DllExports.h  ICppKeyboardDevice.h  dllmain.cpp  pch.h
CppKeyboardColour/: Animation.cpp  Animation.h  AnimationFactory.cpp  AnimationFactory.h  Animations.h  BreatheAnimation.cpp  BreatheAnimation.h  BreatheAnimationNewColours.cpp  BreatheAnimationNewColours.h  Colour.h  ColourFactory.cpp  ColourFactory.h  ColourShiftAnimation.cpp  ColourShiftAnimation.h  ColourTransformAnimation.cpp  ColourTransformAnimation.h  CommandLine.cpp  CommandLine.h  ConsoleUtils.cpp  ConsoleUtils.h  CppKeyboardColour.cpp  CppKeyboardColour.vcxproj  CppKeyboardColour.vcxproj.filters  DeviceIdRetriever.cpp  DeviceIdRetriever.h  DeviceIdTranslator.cpp  DeviceIdTranslator.h  DeviceIds.h  DeviceKBCapabilities.h  ExtendedStl.h  FakeKeyboardCommunicator.cpp  FakeKeyboardCommunicator.h  Frame.h  FrameCollection.cpp  FrameCollection.h  FramePatternGenerator.cpp  FramePatternGenerator.h  FreshBreatheAnimation.cpp  FreshBreatheAnimation.h  HeartbeatAnimation.cpp  (+50 more)
CppKeyboardColour/CppKeyboardColour/: BreatheAnimation.h  ColourFactory.h  DeviceIdRetriever.cpp  DeviceIdRetriever.h  DeviceIdTranslator.h  FakeKeyboardCommunicator.h  IDeviceIdTranslator.h  Keyboard.cpp  MathConstants.h  PulsatingBlinkAnimation.cpp  PulsatingBlinkAnimation.h  SystemAnimation.h
CppKeyboardColour/Debug/: CppKeyboardColour.pch  vc141.idb
CppKeyboardColour/KeyboardColor GUI/: keyboardcoulour.cpp  (+4 more)
KeyboardColor GUI/: CMakeLists copy.txt  CMakeLists.txt  keyboardcoulour - Copie.ui  keyboardcoulour.cpp  keyboardcoulour.h  keyboardcoulour.ui  main.cpp  resources.qrc  singleappinstance.cpp  singleappinstance.h
Scripts/: RegisterClevoKbOnBoot.cmd  StartClevoKB.cmd  UnregisterClevoKbOnBoot.cmd
(+19 files in other folders)
